--- a/README.org
+++ b/README.org
@@ -3,27 +3,25 @@
 #+TODO: TODO IN-PROGRESS(!) | DONE(!)
 
 
-* Field Notes
+* Programming Language Learning
 
-** Programming Language Learning
+** Haskell
 
-*** Haskell
+*** DONE Reference Materials
+    CLOSED: [2019-05-08 Wed 10:59]
 
-**** DONE Reference Materials
-     CLOSED: [2019-05-08 Wed 10:59]
+    - [[https://www.quora.com/What-are-the-best-resources-for-learning-Haskell][Quora - Best Resources For Learning Haskell]]
 
-     - [[https://www.quora.com/What-are-the-best-resources-for-learning-Haskell][Quora - Best Resources For Learning Haskell]]
-
-**** TODO Haskell Environment Setup
+*** TODO Haskell Environment Setup
      
-     I am using the following links for inspiration.
+    I am using the following links for inspiration.
      
-     - [[https://lexi-lambda.github.io/blog/2018/02/10/an-opinionated-guide-to-haskell-in-2018/][An Opinionated Guide To Haskell In 2018]]
-     - [[https://touk.pl/blog/2015/10/14/getting-started-with-haskell-stack-and-spacemacs/][Getting Started with Haskell, Stack, and Spacemacs]] (remember, don't `stack install`)
+    - [[https://lexi-lambda.github.io/blog/2018/02/10/an-opinionated-guide-to-haskell-in-2018/][An Opinionated Guide To Haskell In 2018]]
+    - [[https://touk.pl/blog/2015/10/14/getting-started-with-haskell-stack-and-spacemacs/][Getting Started with Haskell, Stack, and Spacemacs]] (remember, don't =stack install=)
        
 
-**** TODO Write Yourself A Scheme in 48 Hours
+*** TODO Write Yourself A Scheme in 48 Hours
 
-     This seems like the best place to start at the moment.
+    This seems like the best place to start at the moment.
 
-     [[https://upload.wikimedia.org/wikipedia/commons/a/aa/Write_Yourself_a_Scheme_in_48_Hours.pdf][Write Yourself A Scheme in 48 Hours]]
+    [[https://upload.wikimedia.org/wikipedia/commons/a/aa/Write_Yourself_a_Scheme_in_48_Hours.pdf][Write Yourself A Scheme in 48 Hours]]
