--- a/README.org
+++ b/README.org
@@ -36,6 +36,7 @@
     - [X] Chapter 1
     - [X] Chapter 2
     - [X] Chapter 3
+    - [ ] Chapter 4
     - [ ] Chapter 5
     - [ ] Chapter 6
     - [ ] Chapter 7
@@ -77,9 +78,9 @@
       brew update && brew install chicken && brew install guile
     #+end_src
 
-    Since I am using Spacemacs, there is a layer for interacting for Scheme (Chicken/Guile). 
+    Since I am using Spacemacs, there is a layer for interacting with Scheme (Chicken/Guile). 
    
-    Add the scheme layer to emacs
+    Add the scheme layer to emacs.
  
     #+begin_src elisp
       (defun dotspacemacs/layers ()
@@ -91,10 +92,104 @@
     
 ** Python
 
+*** Data Structures
+
+**** TODO List
+
+     #+begin_src python
+       # Initializing
+       numbers = [1,2,3,4,5,6]
+
+       # Getting by Index
+       first = numbers[0]
+
+     #+end_src
+
+     #+RESULTS:
+     : None
+
+
+**** TODO Tuple
+
+     Use when: 
+
+**** Dict
+
+     
+*** TODO List Comprehensions
+    
+    Use when: 
+
 *** Reference Materials
 
 **** TODO [[file:programming/python/50_Ways.org][Effective Python]]
     
+**** TODO Think Complexity
+     
+**** TODO [[file:programming/python/SICP.org][Structure and Interpretation of Computer Programs]]
+
+** Javascript
+
+*** Definitions
+
+**** Prototypical Inheritance
+     
+**** Closure
+     
+     #+begin_quote
+     A /closure/ is the combination of a function and the lexical environment within which that function was declared.
+     
+     -- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Closures
+     #+end_quote
+
+     In other words, a /closure/ is a function that is created in the body of another function, which has access to the outer function's scope. 
+
+     _Why?_ It is JavaScript's way of avoiding global scope, aka Encapsulation.
+
+     #+begin_src js
+       function init() {
+           var name = 'George Washington';
+           function displayName() { // <-- This is a closure
+               console.log(name);   // <-- Has access to the name var outside of its scope
+           }
+           displayName();
+       }
+
+       init();
+     #+end_src
+
+     #+RESULTS:
+     : George Washington
+     : undefined
+
+    
+*** Reference Materials
+ 
+**** Thinking In Ramda
+     http://randycoulman.com/blog/categories/thinking-in-ramda/
+     
+     
+
+* Object Oriented Programming
+  
+** TODO Definitions (Pillars)
+
+*** TODO 1. Abstraction 
+    
+*** TODO 2. Encapsulation 
+    
+*** TODO 3. Inheritance 
+    
+*** TODO 4. Polymorphism 
+
+*** TODO Compare Polymorphism and Inheritance
+
+    https://techdifferences.com/difference-between-inheritance-and-polymorphism.html
+
+
+* Design Patterns
+
+ 
 * Cloud Architecture
 
 ** AWS
@@ -102,3 +197,4 @@
 *** SQS
 
     1. Make sure you know how to fail properly
+       
