--- a/infrastructure/aws/aws_solutions_architect_associate.org
+++ b/infrastructure/aws/aws_solutions_architect_associate.org
@@ -12,9 +12,37 @@ https://aws.amazon.com/architecture/well-architected/
 
 * TODO Retake Udemy Course
 
-** TODO Section 1: Introduction 2019
-   
-** TODO Section 2: AWS - 10,000 Foot Overview (2019 course)
+** DONE Section 1: Introduction 2019
+   CLOSED: [2019-05-31 Fri 17:58]
+     
+   - 130 Minutes in Length
+   - 60 Questions
+   - Multiple Choice
+   - Results are between 100-1000 with a passing score of 720
+   - Aim for 70%
+   - Qualification is valid for 2 years
+   - Scenario based questions
+   - Practice Exam is $20
+   - Registration is $150
+ 
+** DONE Section 2: AWS - 10,000 Foot Overview (2019 course)
+   CLOSED: [2019-05-31 Fri 18:15]
+ 
+*** Definitions
+    
+    - A *Region* is a geographical area. Each *Region* consists of 2 (or more) *Availability Zones*.
+    - An *Availibility Zone* is one or more data centers in a given area, depending on proximity.
+    - An *Edge Location* is an endpoint for AWS which are used for caching content. Think *CloudFront CDN*
+      - _150_ *Edge Locations* around the world.
+      
+*** What do you need to know to pass?
+    
+    - Security, Identity & Compliance (IAM inside out)
+    - Network & Content Delivery (Route53, VPCs) # Very Important
+    - Compute (EC2, Lambda)
+    - Storage (S3)
+    - Databases (RDS, DynamoDB, Redshift)
+    - AWS Global Infrastructure
    
 ** TODO Section 3: Identity Access Management & S3 (2019 course)
    
@@ -26,7 +54,7 @@ https://aws.amazon.com/architecture/well-architected/
    
 ** TODO Section 7: VPCs (2019 course)
    
-** TODO Section 8: HA Architecture (2019 course)
+** TODO Section 8: HA (Highly Available) Architecture (2019 course)
    
 ** TODO Section 9: Applications (2019 course)
    
@@ -34,4 +62,6 @@ https://aws.amazon.com/architecture/well-architected/
    
 ** TODO Section 11: Good Luck & What's Next (2019 course)
  
-* TODO Retake Mock Exams
+* TODO Purchase and take AWS Practice Exam
+  
+* TODO Retake Udemy Mock Exams
