Add TOC without numbers

--- a/programming/python/50_Ways.org
+++ b/programming/python/50_Ways.org
@@ -1,5 +1,6 @@
 #+TITLE: 59 Ways To Improve Python
 #+STARTUP: logdone
+#+OPTIONS: toc:2 num:nil
 #+TODO: TODO IN-PROGRESS | DONE(!)
 
 * Pythonic Thinking
